<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.SettingsActivity">

    <View
        android:id="@+id/_bg__main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/_bg__main_menu_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_7"
        android:layout_width="408dp"
        android:layout_height="528dp"
        android:background="@drawable/rectangle_7_shape"
        app:layout_constraintBottom_toBottomOf="@+id/_bg__main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/by_bim_bom_team"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/dog_breed"
        android:layout_width="240dp"
        android:layout_height="99dp"
        android:layout_gravity="center_horizontal|center"
        android:autoSizeMaxTextSize="45sp"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:text="@string/dog_breed_string"
        android:textColor="@color/dog_breed_color"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/by_bim_bom_team"
        android:layout_width="340dp"
        android:layout_height="29dp"
        android:layout_gravity="center_horizontal|center"
        android:autoSizeMaxTextSize="20sp"
        android:ellipsize="none"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/by_bim_bom_team_string"
        android:textColor="@color/dog_breed_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnClearHistory"
        android:layout_width="261dp"
        android:layout_height="53dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="369dp"
        android:background="@drawable/rounded_button_background"
        android:fontFamily="@font/julius_sans_one"
        android:text="@string/clear_history"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />

    <Button
        android:id="@+id/btnEditAccount"
        android:layout_width="261dp"
        android:layout_height="53dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="429dp"
        android:background="@drawable/rounded_button_background"
        android:fontFamily="@font/julius_sans_one"
        android:text="@string/edit_account"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <Button
        android:id="@+id/btnDeleteAccont"
        android:layout_width="263dp"
        android:layout_height="53dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="309dp"
        android:background="@drawable/rounded_button_background"
        android:fontFamily="@font/julius_sans_one"
        android:text="@string/delete_account"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="53dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_button_background"
        android:drawableTop="@drawable/image_back"
        android:paddingTop="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="202dp"
        android:layout_height="64dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_button_background"
        android:fontFamily="@font/julius_sans_one"
        android:text="@string/logout"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>