<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <View
        android:id="@+id/_bg__main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/_bg__main_menu_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/rectangle_7"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:background="@drawable/rectangle_7_shape"
        app:layout_constraintBottom_toBottomOf="@+id/_bg__main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/_bg__main_menu"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/by_bim_bom_team"
        android:layout_width="180dp"
        android:layout_height="22dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="136dp"
        android:autoSizeMaxTextSize="20sp"
        android:ellipsize="none"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/by_bim_bom_team_string"
        android:textColor="@color/dog_breed_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/_bg__main_menu" />
    <Button
        android:id="@+id/btnBack"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_button_background"
        android:drawableTop="?attr/actionModeCloseDrawable"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />
    <TextView
        android:id="@+id/dog_breed"
        android:layout_width="213dp"
        android:layout_height="106dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="40dp"
        android:autoSizeMaxTextSize="45sp"
        android:fontFamily="@font/julius_sans_one"
        android:gravity="center"
        android:text="@string/dog_breed_string"
        android:textColor="@color/dog_breed_color"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/by_bim_bom_team"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/_bg__main_menu"
        app:layout_constraintVertical_bias="1.0" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="135dp"
        android:layout_height="191dp"
        android:layout_marginBottom="270dp"
        android:src="@drawable/logo1"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="268dp"
        android:layout_height="39dp"
        android:layout_marginBottom="265dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/_bg__main_menu"
        app:layout_constraintVertical_bias="0.953"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnSingUp"
        android:layout_width="193dp"
        android:layout_height="59dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/rounded_button_background"
        android:enabled="true"
        android:text="@string/SIGN_UP"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/_bg__main_menu"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="268dp"
        android:layout_height="39dp"
        android:layout_marginBottom="310dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/_bg__main_menu"
        app:layout_constraintVertical_bias="0.947"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etPasswordRepeat"
        android:layout_width="268dp"
        android:layout_height="39dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="@string/password_repeat"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/_bg__main_menu"
        app:layout_constraintVertical_bias="0.957"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="498dp" />

</androidx.constraintlayout.widget.ConstraintLayout>